[package]
name = "noto-m"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28"
egui = "0.28"
libp2p = { version = "0.53", features = ["tokio", "kad", "noise", "yamux", "tcp", "identify", "request-response", "relay", "autonat", "dcutr", "macros", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_core = "0.6"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
futures = "0.3"
